 2012-03-05 13:48  dimitr 
   M src/jrd/cmp.cpp
Fixed the commit mistake.

 2012-03-05 13:47  dimitr 
   M src/jrd/cmp.cpp
Fixed CORE-3777: Conversion error from string when using GROUP BY.

 2012-03-03 16:48  alexpeshkoff 
   M src/burp/backup.epp
   M src/burp/burp.cpp
   M src/burp/burp.h
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
Backported fix for CORE-3649: gbak deletes backup file even if error happens when it's already successfully closed

 2012-03-01 17:13  alexpeshkoff 
   M src/utilities/gsec/gsec.cpp
Backported fix for CORE-3762: gsec returns 0 return code on some errors

 2012-02-27 15:51  asfernandes 
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
Backported fix for CORE-2457 - UNICODE_CI internal gds software consistency check.

 2012-02-27 15:51  asfernandes 
   M src/jrd/btr.cpp
   M src/jrd/btr_proto.h
   M src/jrd/idx.cpp
Backported fix for CORE-1997 - Broken foreign key handling for multi-segmented index using multi-level collations.

 2012-02-27 08:17  hvlad 
   M src/jrd/lck.cpp
Fixed bug CORE-3778 : AV at connection shutdown

 2012-02-15 10:01  dimitr 
   M src/jrd/exe.cpp
   M src/jrd/met.epp
   M src/jrd/met_proto.h
Fixed CORE-3761: Conversion error when using a blob as an argument for the EXCEPTION statement.

 2012-02-02 14:10  alexpeshkoff 
   M src/remote/inet_server.cpp
Fixed CORE-3750: Error increasing limits on posix (thanks to Dmitry Starodubov)

 2012-01-19 15:34  alexpeshkoff 
   M src/jrd/opt.cpp
Backported fix for CORE-3736: WITH LOCK clause is allowed for users with read-only rights on some table, thus blocking others from updating this table

 2012-01-19 07:26  robocop 
   M src/qli/dtr.cpp
   M src/qli/dtr.h
   M src/qli/meta.epp
Stop db triggers in qli, from Herr Schlottmann-G?\195?\182dde

 2012-01-18 12:05  alexpeshkoff 
   M src/burp/restore.epp
Backported fix for CORE-3733: GBAK fails to fix system generators while restoring

 2012-01-17 17:25  dimitr 
   M src/remote/protocol.cpp