@@ -1,3 +1,11 @@
+ 2012-03-06 13:28  alexpeshkoff 
+   M builds/make.new/config/install-sh
+   M builds/posix/Makefile.in.client.util
+   M src/jrd/isc.h
+   M src/jrd/isc_sync.cpp
+   M src/lock/print.cpp
+Fixed CORE-3682: Firebird 2.5.1 OSX Lion hangs on attaching to second database
+
  2012-03-05 13:48  dimitr 
    M src/jrd/cmp.cpp
 Fixed the commit mistake.
